Added 2 controllers for summarizing total bill and individual bill

--- a/css/style.scss
+++ b/css/style.scss
@@ -50,6 +50,10 @@ div {
   margin: 30px auto;
 }
 
+.selected {
+  color: red;
+}
+
 #addedUsers {
   display: block;
   background-color: lightgrey;
