--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,9 @@ div {
 .container {
   margin: 30px auto; }
 
+.selected {
+  color: red; }
+
 #addedUsers {
   display: block;
   background-color: lightgrey;
