--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Lato);
+body {
+  font-family: "Lato", sans-serif; }
+
 img {
   display: none; }
 
@@ -9,7 +13,8 @@ input {
   border-radius: 5px;
   border: 1px solid lightgrey;
   padding: 5px;
-  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  font-size: 15px;
   margin: 5px 2px; }
 
 .item > div {
@@ -21,7 +26,8 @@ input {
   border-radius: 5px;
   border: 1px solid lightgrey;
   padding: 5px;
-  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  font-size: 15px;
   margin: 5px 2px; }
 
 #description {
@@ -30,7 +36,8 @@ input {
   border-radius: 5px;
   border: 1px solid lightgrey;
   padding: 5px;
-  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  font-size: 15px;
   margin: 5px 2px; }
 
 #price {
@@ -39,16 +46,22 @@ input {
   border-radius: 5px;
   border: 1px solid lightgrey;
   padding: 5px;
-  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  font-size: 15px;
   margin: 5px 2px; }
+
+form {
+  margin-bottom: 100px; }
 
 button {
   height: 30px;
   border-radius: 5px;
   border: 1px solid lightgrey;
   padding: 5px;
-  font-size: 16px;
-  margin: 5px 2px; }
+  font-family: "Lato", sans-serif;
+  font-size: 15px;
+  margin: 5px 2px;
+  display: block; }
 
 div {
   font-size: 26px; }
@@ -69,11 +82,16 @@ div {
   border-radius: 5px;
   border: 1px solid lightgrey;
   padding: 5px;
-  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  font-size: 15px;
   margin: 5px 2px; }
 
 #addedUsers:hover, #addedUsers:active, #addedUsers:link, #addedUsers:visited {
   text-decoration: none;
   color: black; }
+
+#tip, #tax, #price {
+  display: block;
+  width: 60px; }
 
 /*# sourceMappingURL=style.css.map */
