--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,54 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
 @import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah);
+@import url(https://fonts.googleapis.com/css?family=Quicksand:400,300);
+html {
+  padding: 0px 0px;
+  margin: 0px 0px; }
+
 body {
-  font-family: "Lato", sans-serif; }
+  font-family: "Lato", sans-serif;
+  padding: 0px 0px;
+  margin: 0px 0px;
+  overflow-y: hidden; }
+
+header {
+  margin: 0 0;
+  padding: 0 0;
+  background-color: #153B64;
+  height: 40px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 300;
+  font-size: 1.7em;
+  vertical-align: center;
+  text-align: center;
+  color: #DDE54A;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 10; }
 
 .main {
   width: 300px;
-  padding: 0 15 20 15;
+  height: 60%;
+  margin: 50px auto;
+  margin-top: 90px;
+  margin-bottom: 30px;
   position: relative; }
-  @media screen and (min-width: 400px) {
-    .main {
-      width: 600px;
-      margin: 50px auto 0 auto;
-      border: 2px solid #DDE54A;
-      border-radius: 10px; } }
-  .main h1 {
+  .main .heading {
     text-align: center;
-    font-family: "Gloria Hallelujah", cursive;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 300;
+    font-size: .8em;
     line-height: 90%; }
   .main .container {
     width: 300px;
-    margin: 30px auto;
-    text-align: center; }
+    margin: 10px auto;
+    text-align: right;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 300;
+    height: 70%;
+    overflow-y: scroll; }
   .main .tipContainer {
     width: 300px;
     margin: 0 auto; }
@@ -54,28 +82,28 @@ body {
     .main .lowerLabel button {
       display: inline;
       margin: 0 0; }
+  .main #addFriend, .main #addedUsers {
+    width: 90px;
+    margin: 0 0;
+    padding: 0 0;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid lightgrey;
+    padding: 5px;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 300;
+    font-size: 12px;
+    margin: 5px 2px; }
   .main input {
-    width: 100%;
-    margin: 0 auto; }
+    width: 100%; }
   .main input:focus {
     background-color: #153B64;
     color: white; }
   .main input::-webkit-input-placeholder:focus {
     color: white; }
-  .main button {
-    background-color: #DDE54A;
-    border: 1px solid #DDE54A;
-    width: 70px;
-    margin: 15px auto 0 auto; }
   .main button:hover {
     background-color: #153B64;
     color: white; }
-  .main #addedUsers, .main #viewTotals {
-    width: 100px;
-    position: absolute;
-    float: right;
-    bottom: 20px;
-    right: 20px; }
   .main table {
     margin: 0 auto; }
   .main thead {
@@ -83,8 +111,11 @@ body {
   .main td {
     width: 100px; }
 
-img {
-  display: none; }
+button {
+  background-color: #DDE54A;
+  border: 1px solid #DDE54A;
+  width: 70px;
+  margin: 15px auto 0 auto; }
 
 input:focus, button:focus {
   outline: none; }
@@ -94,81 +125,9 @@ input {
   border-radius: 5px;
   border: 1px solid lightgrey;
   padding: 5px;
-  font-family: "Lato", sans-serif;
-  font-size: 15px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 300;
+  font-size: 12px;
   margin: 5px 2px; }
-
-.item > div {
-  display: inline-block; }
-
-#quantity, #tip, #tax {
-  width: 70px;
-  height: 30px;
-  border-radius: 5px;
-  border: 1px solid lightgrey;
-  padding: 5px;
-  font-family: "Lato", sans-serif;
-  font-size: 15px;
-  margin: 5px 2px; }
-
-#description {
-  width: 300px;
-  height: 30px;
-  border-radius: 5px;
-  border: 1px solid lightgrey;
-  padding: 5px;
-  font-family: "Lato", sans-serif;
-  font-size: 15px;
-  margin: 5px 2px; }
-
-#price {
-  width: 70px;
-  height: 30px;
-  border-radius: 5px;
-  border: 1px solid lightgrey;
-  padding: 5px;
-  font-family: "Lato", sans-serif;
-  font-size: 15px;
-  margin: 5px 2px; }
-
-form {
-  margin-bottom: 20px; }
-
-button {
-  height: 30px;
-  border-radius: 5px;
-  border: 1px solid lightgrey;
-  padding: 5px;
-  font-family: "Lato", sans-serif;
-  font-size: 15px;
-  margin: 5px 2px;
-  display: block; }
-
-div {
-  font-size: 26px; }
-
-.container {
-  margin: 30px auto; }
-
-.selected {
-  background-color: #F405F0;
-  color: #DDE54A; }
-
-div:hover {
-  cursor: pointer; }
-
-.selectSplitters {
-  width: 300px;
-  height: 200px;
-  z-index: 2;
-  border-radius: 10px;
-  background-color: white;
-  position: fixed;
-  top: 150px;
-  left: 450px;
-  padding: 40px;
-  border: 2px solid #DDE54A;
-  overflow-y: scroll;
-  overflow-x: hidden; }
 
 /*# sourceMappingURL=style.css.map */
