--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,14 @@ body {
   margin: 0px 0px;
   overflow-y: hidden; }
 
-header {
+header > a {
   margin: 0 0;
-  padding: 0 0;
+  padding: 10 0 20 0;
   background-color: #153B64;
-  height: 40px;
+  height: 50px;
   font-family: "Quicksand", sans-serif;
   font-weight: 300;
-  font-size: 1.7em;
-  vertical-align: center;
+  font-size: 2.8em;
   text-align: center;
   color: #DDE54A;
   position: fixed;
@@ -28,25 +27,49 @@ header {
   width: 100%;
   z-index: 10; }
 
+a {
+  text-decoration: none; }
+
+input:focus, button:focus {
+  outline: none; }
+
+input {
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+  padding: 5px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  margin: 5px 2px; }
+
 .main {
-  width: 300px;
+  width: 400px;
   height: 60%;
   margin: 50px auto;
-  margin-top: 90px;
+  margin-top: 120px;
   margin-bottom: 30px;
   position: relative; }
   .main .heading {
     text-align: center;
     font-family: "Quicksand", sans-serif;
-    font-weight: 300;
-    font-size: .8em;
+    font-weight: 400;
+    font-size: 1.5em;
     line-height: 90%; }
+  .main input {
+    width: 100%; }
+  .main input:focus {
+    background-color: #153B64;
+    color: white; }
+  .main input::-webkit-input-placeholder:focus {
+    color: white; }
   .main .container {
     width: 300px;
     margin: 10px auto;
     text-align: right;
     font-family: "Quicksand", sans-serif;
     font-weight: 300;
+    font-size: 1.5em;
     height: 70%;
     overflow-y: scroll; }
   .main .tipContainer {
@@ -56,78 +79,119 @@ header {
     width: 300px;
     margin: 0 auto; }
   .main .tipTaxForm {
-    width: 100px;
-    margin: 0 auto;
-    margin-left: 150px;
-    display: inline;
-    float: left; }
+    width: 180px;
+    float: left;
+    margin-left: 20px;
+    margin-bottom: 20px; }
   .main .addContainer {
     width: 500px;
     margin: 0 auto; }
   .main .addItem {
-    clear: both;
-    padding-top: 50px; }
+    clear: both; }
   .main .showTip {
     float: right;
-    margin-right: 200px;
-    display: inline;
-    font-size: 16px; }
+    margin-right: 20px;
+    font-family: "Quicksand", sans-serif;
+    font-size: 1.2em; }
   .main .lowerLabel {
     display: inline;
-    font-size: 14px; }
-    .main .lowerLabel span {
-      display: block;
-      font-size: 10px;
-      color: lightgrey; }
-    .main .lowerLabel button {
-      display: inline;
-      margin: 0 0; }
-  .main #addFriend, .main #addedUsers {
-    width: 90px;
-    margin: 0 0;
-    padding: 0 0;
-    height: 30px;
+    float: left; }
+  .main span {
+    display: block;
+    font-family: "Quicksand", sans-serif;
+    font-size: 10px;
+    color: lightgrey; }
+  .main button {
     border-radius: 5px;
     border: 1px solid lightgrey;
     padding: 5px;
     font-family: "Quicksand", sans-serif;
     font-weight: 300;
-    font-size: 12px;
-    margin: 5px 2px; }
-  .main input {
-    width: 100%; }
-  .main input:focus {
-    background-color: #153B64;
-    color: white; }
-  .main input::-webkit-input-placeholder:focus {
-    color: white; }
+    font-size: 18px;
+    margin: 5px 2px;
+    width: 120px;
+    height: 35px;
+    display: inline-block;
+    align: center;
+    background-color: #DDE54A;
+    border: 1px solid #DDE54A;
+    margin: 15px auto 0 auto; }
   .main button:hover {
     background-color: #153B64;
     color: white; }
   .main table {
-    margin: 0 auto; }
+    margin: 0 auto;
+    font-family: "Quicksand", sans-serif; }
   .main thead {
-    font-weight: bold; }
+    font-weight: 400; }
   .main td {
     width: 100px; }
+  .main tr:hover {
+    color: #F405F0;
+    font-weight: 400; }
+  .main tr:last-child:hover, .main thead > tr:hover {
+    color: black; }
 
-button {
-  background-color: #DDE54A;
-  border: 1px solid #DDE54A;
-  width: 70px;
-  margin: 15px auto 0 auto; }
+img {
+  display: none; }
 
-input:focus, button:focus {
-  outline: none; }
+.item > div {
+  display: inline-block; }
 
-input {
-  height: 30px;
+#tip, #tax {
+  width: 80px;
   border-radius: 5px;
   border: 1px solid lightgrey;
   padding: 5px;
   font-family: "Quicksand", sans-serif;
   font-weight: 300;
-  font-size: 12px;
+  font-size: 18px;
   margin: 5px 2px; }
+
+#quantity {
+  width: 55px; }
+
+#description {
+  width: 245px;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+  padding: 5px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  margin: 5px 2px; }
+
+#price {
+  width: 70px;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+  padding: 5px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  margin: 5px 2px; }
+
+.selected {
+  color: #F405F0;
+  font-weight: 400; }
+
+div:hover {
+  cursor: pointer; }
+
+.selectSplitters {
+  width: 300px;
+  height: 200px;
+  margin: 0px auto;
+  z-index: 2;
+  border-radius: 10px;
+  background-color: white;
+  position: fixed;
+  top: 20%;
+  padding: 40px;
+  border: 1px solid #DDE54A;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  font-family: "Quicksand", sans-serif;
+  font-size: 1.2em; }
 
 /*# sourceMappingURL=style.css.map */
