--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,15 @@ input {
   margin: 5px 2px; }
 
 .main {
-  width: 400px;
+  width: 90%;
   height: 60%;
   margin: 50px auto;
   margin-top: 120px;
   margin-bottom: 30px;
   position: relative; }
+  @media only screen and (min-device-width: 420px) and (orientation: landscape) {
+    .main {
+      width: 50%; } }
   .main .heading {
     text-align: center;
     font-family: "Quicksand", sans-serif;
@@ -79,23 +82,28 @@ input {
     width: 300px;
     margin: 0 auto; }
   .main .tipTaxForm {
-    width: 180px;
-    float: left;
-    margin-left: 20px;
+    width: 100%;
     margin-bottom: 20px; }
   .main .addContainer {
-    width: 500px;
+    width: 100%;
     margin: 0 auto; }
+    @media only screen and (min-device-width: 420px) {
+      .main .addContainer {
+        display: inline-block;
+        width: 100%; } }
   .main .addItem {
-    clear: both; }
+    clear: both;
+    margin: 0px 10px; }
   .main .showTip {
-    float: right;
-    margin-right: 20px;
+    display: block;
     font-family: "Quicksand", sans-serif;
     font-size: 1.2em; }
   .main .lowerLabel {
     display: inline;
+    margin-right: 5px;
     float: left; }
+  .main #addTipTax {
+    margin: 7 0; }
   .main span {
     display: block;
     font-family: "Quicksand", sans-serif;
@@ -119,6 +127,8 @@ input {
   .main button:hover {
     background-color: #153B64;
     color: white; }
+  .main .clearfix {
+    clear: both; }
   .main table {
     margin: 0 auto;
     font-family: "Quicksand", sans-serif; }
@@ -126,6 +136,8 @@ input {
     font-weight: 400; }
   .main td {
     width: 100px; }
+  .main tr {
+    padding: 10px 0px; }
   .main tr:hover {
     color: #F405F0;
     font-weight: 400; }
@@ -149,10 +161,16 @@ img {
   margin: 5px 2px; }
 
 #quantity {
+  display: block;
   width: 55px; }
+  @media only screen and (min-device-width: 420px) {
+    #quantity {
+      display: inline-block;
+      width: 15%; } }
 
 #description {
-  width: 245px;
+  display: block;
+  width: 70%;
   border-radius: 5px;
   border: 1px solid lightgrey;
   padding: 5px;
@@ -160,9 +178,14 @@ img {
   font-weight: 300;
   font-size: 18px;
   margin: 5px 2px; }
+  @media only screen and (min-device-width: 420px) {
+    #description {
+      display: inline-block;
+      width: 55%; } }
 
 #price {
-  width: 70px;
+  display: block;
+  width: 60%;
   border-radius: 5px;
   border: 1px solid lightgrey;
   padding: 5px;
@@ -170,6 +193,10 @@ img {
   font-weight: 300;
   font-size: 18px;
   margin: 5px 2px; }
+  @media only screen and (min-device-width: 420px) {
+    #price {
+      display: inline-block;
+      width: 20%; } }
 
 .selected {
   color: #F405F0;
@@ -193,5 +220,8 @@ div:hover {
   overflow-x: hidden;
   font-family: "Quicksand", sans-serif;
   font-size: 1.2em; }
+
+#backToTotals {
+  width: 60px; }
 
 /*# sourceMappingURL=style.css.map */
