--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -1,9 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Lato);
-@import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah);
 @import url(https://fonts.googleapis.com/css?family=Quicksand:400,300);
 
-$font-family: 'Lato', sans-serif;
-$header: 'Gloria Hallelujah', cursive;
 $navbar: 'Quicksand', sans-serif;
 $lime: #DDE54A;
 $deepBlue: #153B64;
@@ -27,7 +23,7 @@ html {
 }
 
 body {
-  font-family: $font-family;
+  font-family: $navbar;
   padding: 0px 0px;
   margin: 0px 0px;
   overflow-y: hidden;
@@ -101,8 +97,8 @@ input {
 
   .container {
     width: 300px;
-    margin: 10px auto;
-    text-align: right;
+    margin: 20px auto;
+    text-align: left;
     font-family: $navbar;
     font-weight: 300;
     font-size: 1.5em;
@@ -121,15 +117,7 @@ input {
   }
 
   .tipTaxForm {
-    // width: 100px;
-    // margin: 0 auto;
-    // // margin-left: 150px;
-    // // display: inline;
-
-    // width: 180px;
     width: 100%;
-    // float: left;
-    // margin-left: 20px;
     margin-bottom: 20px;
   }
 
@@ -189,31 +177,9 @@ input {
     color: lightgrey;
   }
 
-  // #addFriend, #addedUsers {
-  button {
-    @include inputGlobalStyle;
-    width: 120px;
-    height: 35px;
-    display: inline-block;
-    align: center;
-    background-color: $lime;
-    border: 1px solid $lime;
-    margin: 15px auto 0 auto;
-  }
-
-
-  button:hover {
-    background-color: $deepBlue;
-    color: white;
-  }
-
   .clearfix {
     clear:both;
   }
-
-  // #viewTotals {
-  //   margin-left: 20px;
-  // }
 
   table {
     margin: 0 auto;
@@ -235,14 +201,31 @@ input {
   tr:last-child:hover, thead > tr:hover {
     color: black;
   }
+
+  .item {
+    display: block;
+    width: 300px;
+  }
+} //main
+
+button {
+  @include inputGlobalStyle;
+  width: 120px;
+  height: 35px;
+  display: inline-block;
+  align: center;
+  background-color: $lime;
+  border: 1px solid $lime;
+  margin: 15px auto 0 auto;
+}
+
+button:hover {
+  background-color: $deepBlue;
+  color: white;
 }
 
 img {
   display: none;
-}
-
-.item > div {
-  display: inline-block;
 }
 
 #tip, #tax {
@@ -282,59 +265,84 @@ img {
   @include inputGlobalStyle;
 }
 
-// form {
-//   margin-bottom: 20px;
-// }
-
-// button {
-//   @include inputGlobalStyle;
-// }
-
-// div {
-//   font-size: 26px;
-// }
-
-// .container {
-//   margin: 10px auto;
-//   text-align: right;
-//   font-family: $navbar;
-//   font-weight: 300;
-// }
-
 .selected {
-  color: $fuschia;
+  background-color: $deepBlue;
+  color: $lime;
   font-weight: 400;
 }
 
-div:hover {
-  cursor: pointer;
+.overlayNotification {
+  @media only screen and (min-device-width: 420px) {
+    top: 20%;
+  }
+  width: 100%;
+  height: 100%;
+  z-index: 15;
+  position: relative;
+  top: 0;
+  left: 0;
 }
 
-.selectSplitters {
-  width: 300px;
-  height: 200px;
+.selectSplitters {  
+  @media only screen and (min-device-width: 420px) {
+    width: 40%;
+    height: 70%;
+    top: 20%;
+    border-radius: 10px;
+  }
+  position: relative;
+  width: 100%;
+  height: 100%;
   margin: 0px auto;
-  z-index: 2;
-  border-radius: 10px;
   background-color: white;
-  position: fixed;
-  top: 20%;
-  padding: 40px;
   border: 1px solid $lime;
-  overflow-y: scroll;
-  overflow-x: hidden;
   font-family: $navbar;
   font-size: 1.2em;
 }
 
-#backToTotals {
-  width: 60px;
+.splitters {
+  position: relative;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-// #tip, #tax {
-//   display: block;
-// }
+.assignedPerson {
+  @media only screen and (min-device-width: 420px) {
+    font-size: 1em;
+    padding: 15px 25px;
+  }
+  padding: 20px 30px;
+  font-size: 1.1em;
+  border-bottom: 1px solid $lime;
+}
 
-// #tip, #tax, #price {
-//   width: 60px;
-// }
+.paddedBottom {
+  height: 60px;
+}
+
+#assignBtn {
+  width: 100%;
+  height: 60px;
+  bottom: 0px;
+  border-radius: 0;
+  margin: 0 0; 
+  z-index: 2;
+  position: absolute;
+}
+
+#overlayHeading {
+  @media only screen and (min-device-width: 420px) {
+    font-size: 1em;
+    font-weight: 400;
+  }
+  text-align: center;
+  padding: 10px 20px;
+  font-size: 1.2em;
+  margin: 0 0;
+  border-bottom: 1px solid $lime;
+}
+
+#backToTotals {
+  width: 50px;
+}
