--- a/client/css/style.css
+++ b/client/css/style.css
@@ -48,7 +48,7 @@ input {
   margin-top: 120px;
   margin-bottom: 30px;
   position: relative; }
-  @media only screen and (min-device-width: 420px) and (orientation: landscape) {
+  @media only screen and (min-width: 420px) and (orientation: landscape) {
     .main {
       width: 50%; } }
   .main .heading {
@@ -85,7 +85,7 @@ input {
   .main .addContainer {
     width: 100%;
     margin: 0 auto; }
-    @media only screen and (min-device-width: 420px) {
+    @media only screen and (min-width: 420px) {
       .main .addContainer {
         display: inline-block;
         width: 100%; } }
@@ -163,7 +163,7 @@ img {
 #quantity {
   display: block;
   width: 55px; }
-  @media only screen and (min-device-width: 420px) {
+  @media only screen and (min-width: 420px) {
     #quantity {
       display: inline-block;
       width: 15%; } }
@@ -178,7 +178,7 @@ img {
   font-weight: 300;
   font-size: 18px;
   margin: 5px 2px; }
-  @media only screen and (min-device-width: 420px) {
+  @media only screen and (min-width: 420px) {
     #description {
       display: inline-block;
       width: 55%; } }
@@ -193,7 +193,7 @@ img {
   font-weight: 300;
   font-size: 18px;
   margin: 5px 2px; }
-  @media only screen and (min-device-width: 420px) {
+  @media only screen and (min-width: 420px) {
     #price {
       display: inline-block;
       width: 20%; } }
@@ -210,7 +210,7 @@ img {
   position: relative;
   top: 0;
   left: 0; }
-  @media only screen and (min-device-width: 420px) {
+  @media only screen and (min-width: 420px) {
     .overlayNotification {
       top: 20%; } }
 
@@ -223,7 +223,13 @@ img {
   border: 1px solid #DDE54A;
   font-family: "Quicksand", sans-serif;
   font-size: 1.2em; }
-  @media only screen and (min-device-width: 420px) {
+  @media only screen and (min-width: 600px) {
+    .selectSplitters {
+      width: 80%;
+      height: 70%;
+      top: 20%;
+      border-radius: 10px; } }
+  @media only screen and (min-width: 700px) {
     .selectSplitters {
       width: 40%;
       height: 70%;
@@ -240,7 +246,7 @@ img {
   padding: 20px 30px;
   font-size: 1.1em;
   border-bottom: 1px solid #DDE54A; }
-  @media only screen and (min-device-width: 420px) {
+  @media only screen and (min-width: 420px) {
     .assignedPerson {
       font-size: 1em;
       padding: 15px 25px; } }
@@ -263,12 +269,79 @@ img {
   font-size: 1.2em;
   margin: 0 0;
   border-bottom: 1px solid #DDE54A; }
-  @media only screen and (min-device-width: 420px) {
+  @media only screen and (min-width: 420px) {
     #overlayHeading {
       font-size: 1em;
       font-weight: 400; } }
 
 #backToTotals {
   width: 50px; }
+
+.bottomBtn {
+  width: 100%;
+  height: 60px;
+  bottom: 0px;
+  left: 0px;
+  border-radius: 0;
+  margin: 0 0;
+  z-index: 2;
+  position: fixed; }
+  @media only screen and (min-width: 420px) {
+    .bottomBtn {
+      border-radius: 5px;
+      border: 1px solid lightgrey;
+      padding: 5px;
+      font-family: "Quicksand", sans-serif;
+      font-weight: 300;
+      font-size: 18px;
+      margin: 5px 2px;
+      width: 120px;
+      height: 35px;
+      display: inline-block;
+      align: center;
+      background-color: #DDE54A;
+      border: 1px solid #DDE54A;
+      margin: 15px auto 0 auto;
+      position: relative; } }
+
+#addFriend, #addToBill {
+  display: block;
+  margin: 15px auto 0 auto; }
+  @media only screen and (min-width: 420px) {
+    #addFriend, #addToBill {
+      border-radius: 5px;
+      border: 1px solid lightgrey;
+      padding: 5px;
+      font-family: "Quicksand", sans-serif;
+      font-weight: 300;
+      font-size: 18px;
+      margin: 5px 2px;
+      width: 120px;
+      height: 35px;
+      display: inline-block;
+      align: center;
+      background-color: #DDE54A;
+      border: 1px solid #DDE54A;
+      margin: 15px auto 0 auto; } }
+
+#bubbleBlue {
+  border-radius: 50%;
+  border: none;
+  position: fixed;
+  background-color: #153B64;
+  left: -10px;
+  width: 250px;
+  height: 250px; }
+
+#bubbleGreen {
+  border-radius: 50%;
+  border: none;
+  position: fixed;
+  background-color: #DDE54A;
+  left: 100px;
+  top: 70px;
+  width: 280px;
+  height: 280px;
+  z-index: 15; }
 
 /*# sourceMappingURL=style.css.map */
