--- a/client/css/style.css
+++ b/client/css/style.css
@@ -13,7 +13,7 @@ header > a {
   margin: 0 0;
   padding: 10 0 20 0;
   background-color: #153B64;
-  height: 50px;
+  height: 70px;
   font-family: "Quicksand", sans-serif;
   font-weight: 300;
   font-size: 2.8em;
@@ -25,8 +25,9 @@ header > a {
   width: 100%;
   z-index: 10; }
 
-a {
-  text-decoration: none; }
+a, a:hover, a:focus {
+  text-decoration: none;
+  color: #DDE54A; }
 
 input:focus, button:focus {
   outline: none; }
@@ -84,10 +85,11 @@ input {
     margin-bottom: 20px; }
   .main .addContainer {
     width: 100%;
-    margin: 0 auto; }
+    margin: 30px auto; }
     @media only screen and (min-width: 420px) {
       .main .addContainer {
-        display: inline-block;
+        display: flex;
+        justify-content: space-between;
         width: 100%; } }
   .main .addItem {
     clear: both;
@@ -102,11 +104,6 @@ input {
     float: left; }
   .main #addTipTax {
     margin: 7 0; }
-  .main span {
-    display: block;
-    font-family: "Quicksand", sans-serif;
-    font-size: 10px;
-    color: lightgrey; }
   .main .clearfix {
     clear: both; }
   .main table {
@@ -125,11 +122,12 @@ input {
     color: black; }
   .main .item {
     display: block;
-    width: 300px; }
+    width: 100%;
+    position: relative; }
 
 .showInputs {
-  width: 90%;
-  margin: 0 auto;
+  width: 100%;
+  margin: 20px auto;
   display: block; }
 
 button {
@@ -141,16 +139,19 @@ button {
   font-size: 18px;
   margin: 5px 2px;
   width: 120px;
-  height: 35px;
+  height: 40px;
   display: inline-block;
   align: center;
   background-color: #DDE54A;
   border: 1px solid #DDE54A;
   margin: 15px auto 0 auto; }
 
-button:hover {
+button:hover, #addFriend:hover, #addToBill:hover {
   background-color: #153B64;
   color: white; }
+
+button:hover span {
+  color: #DDE54A; }
 
 img {
   display: none; }
@@ -251,6 +252,7 @@ img {
   overflow-x: hidden; }
 
 .assignedPerson {
+  position: relative;
   padding: 20px 30px;
   font-size: 1.1em;
   border-bottom: 1px solid #DDE54A; }
@@ -258,6 +260,20 @@ img {
     .assignedPerson {
       font-size: 1em;
       padding: 15px 25px; } }
+
+.fa-plus {
+  position: absolute;
+  right: 20px;
+  top: 20px; }
+
+.fa-check-circle-o {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: grey; }
+
+.assignedSplitters {
+  color: #F405F0; }
 
 .paddedBottom {
   height: 60px; }
@@ -267,11 +283,13 @@ img {
   height: 60px;
   bottom: 0px;
   border-radius: 0;
+  border: none;
   margin: 0 0;
   z-index: 2;
   position: absolute; }
 
 #overlayHeading {
+  position: relative;
   text-align: center;
   padding: 10px 20px;
   font-size: 1.2em;
@@ -303,8 +321,8 @@ img {
       font-weight: 300;
       font-size: 18px;
       margin: 5px 2px;
-      width: 120px;
-      height: 35px;
+      width: 100%;
+      height: 40px;
       display: inline-block;
       align: center;
       background-color: #DDE54A;
@@ -314,6 +332,7 @@ img {
 
 #addFriend, #addToBill {
   display: block;
+  width: 60%;
   margin: 15px auto 0 auto; }
   @media only screen and (min-width: 420px) {
     #addFriend, #addToBill {
@@ -324,19 +343,18 @@ img {
       font-weight: 300;
       font-size: 18px;
       margin: 5px 2px;
-      width: 120px;
-      height: 35px;
+      width: 100%;
+      height: 40px;
       display: inline-block;
       align: center;
       background-color: #DDE54A;
       border: 1px solid #DDE54A;
       margin: 15px auto 0 auto; } }
 
-.xOut {
+.fa-times {
   position: absolute;
-  top: 10px;
+  top: 13px;
   right: 10px;
-  font-size: 20px;
   color: lightgrey; }
 
 #bubbleBlue {
