--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -39,7 +39,7 @@ header > a {
   margin: 0 0;
   padding: 10 0 20 0;
   background-color: $deepBlue;
-  height: 50px;
+  height: 70px;
   font-family: $navbar;
   font-weight: 300;
   font-size: 2.8em;
@@ -52,8 +52,9 @@ header > a {
   z-index: 10;
 }
 
-a {
+a, a:hover, a:focus {
   text-decoration: none;
+  color: $lime;
 }
 
 input:focus, button:focus {
@@ -129,11 +130,13 @@ input {
 
   .addContainer {
     @media only screen and (min-width: 420px) {
-      display: inline-block;
+      // display: inline-block;
+      display: flex;
+      justify-content: space-between;
       width: 100%;
     }
     width: 100%;
-    margin: 0 auto;
+    margin: 30px auto;
   }
 
   .addItem {
@@ -142,10 +145,6 @@ input {
   }
 
   .showTip {
-    // @media only screen and (min-width: 420px) {
-    //   float: right;
-    // }
-    // margin-right: 20px;
     display: block;
     font-family: $navbar;
     font-size: 1.2em;
@@ -159,28 +158,6 @@ input {
 
   #addTipTax {
     margin: 7 0;
-  }
-
-  // .lowerLabel {
-  //   display: inline;
-  //   width: 50px;
-  //   font-size: 14px; 
-    
-  //   input {
-  //     width: 100%;
-  //   }
-
-  //   button {
-  //     display: inline;
-  //     margin: 0 0;
-  //   }
-
-  // }
-  span {
-    display: block;
-    font-family: $navbar;
-    font-size: 10px;
-    color: lightgrey;
   }
 
   .clearfix {
@@ -210,20 +187,21 @@ input {
 
   .item {
     display: block;
-    width: 300px;
+    width: 100%;
+    position: relative;
   }
 } //main
 
 .showInputs {
-  width: 90%;
-  margin: 0 auto;
+  width: 100%;
+  margin: 20px auto;
   display: block;
 }
 
 button {
   @include inputGlobalStyle;
   width: 120px;
-  height: 35px;
+  height: 40px;
   display: inline-block;
   align: center;
   background-color: $lime;
@@ -231,9 +209,13 @@ button {
   margin: 15px auto 0 auto;
 }
 
-button:hover {
+button:hover, #addFriend:hover, #addToBill:hover {
   background-color: $deepBlue;
   color: white;
+}
+
+button:hover span {
+  color: $lime;
 }
 
 img {
@@ -333,20 +315,40 @@ img {
     font-size: 1em;
     padding: 15px 25px;
   }
+  position: relative;
   padding: 20px 30px;
   font-size: 1.1em;
   border-bottom: 1px solid $lime;
+}
+
+.fa-plus {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+
+.fa-check-circle-o {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: grey;
+}
+
+.assignedSplitters {
+  color: $fuschia;  
 }
 
 .paddedBottom {
   height: 60px;
 }
 
+
 #assignBtn {
   width: 100%;
   height: 60px;
   bottom: 0px;
   border-radius: 0;
+  border: none;
   margin: 0 0; 
   z-index: 2;
   position: absolute;
@@ -357,6 +359,7 @@ img {
     font-size: 1em;
     font-weight: 400;
   }
+  position: relative;
   text-align: center;
   padding: 10px 20px;
   font-size: 1.2em;
@@ -371,8 +374,8 @@ img {
 .bottomBtn {
   @media only screen and (min-width: 420px) {
     @include inputGlobalStyle;
-    width: 120px;
-    height: 35px;
+    width: 100%;
+    height: 40px;
     display: inline-block;
     align: center;
     background-color: $lime;
@@ -393,8 +396,8 @@ img {
 #addFriend, #addToBill {
   @media only screen and (min-width: 420px) {
     @include inputGlobalStyle;
-    width: 120px;
-    height: 35px;
+    width: 100%;
+    height: 40px;
     display: inline-block;
     align: center;
     background-color: $lime;
@@ -402,16 +405,17 @@ img {
     margin: 15px auto 0 auto;
   }
   display: block;
+  width: 60%;
   margin: 15px auto 0 auto; 
 }
 
-.xOut {
+.fa-times {
   position: absolute;
-  top: 10px;
+  top: 13px;
   right: 10px;
-  font-size: 20px;
   color: lightgrey;
 }
+
 // STYLING ABOUT PAGE
 #bubbleBlue {
   @include circleDiv;
