--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -114,6 +114,10 @@ input {
   .addPerson {
     width: 300px;
     margin: 0 auto;
+
+    input {
+      margin: 20px auto 10px auto;
+    }
   }
 
   .tipTaxForm {
@@ -127,7 +131,7 @@ input {
       width: 100%;
     }
     width: 100%;
-    margin: 0 auto;
+    margin: 20px auto 10px auto;
   }
 
   .addItem {
@@ -155,21 +159,6 @@ input {
     margin: 7 0;
   }
 
-  // .lowerLabel {
-  //   display: inline;
-  //   width: 50px;
-  //   font-size: 14px; 
-    
-  //   input {
-  //     width: 100%;
-  //   }
-
-  //   button {
-  //     display: inline;
-  //     margin: 0 0;
-  //   }
-
-  // }
   span {
     display: block;
     font-family: $navbar;
@@ -317,6 +306,24 @@ img {
   border-bottom: 1px solid $lime;
 }
 
+.fa-plus {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+
+.fa-check-circle-o {
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  font-size: 1.5em;
+  color: grey;
+}
+
+.assignedSplitters {
+  color: $fuschia;  
+}
+
 .paddedBottom {
   height: 60px;
 }
@@ -345,4 +352,69 @@ img {
 
 #backToTotals {
   width: 50px;
+}
+
+.bottomBtn {
+  @media only screen and (min-width: 420px) {
+    @include inputGlobalStyle;
+    width: 100%;
+    height: 40px;
+    display: inline-block;
+    align: center;
+    background-color: $lime;
+    border: 1px solid $lime;
+    margin: 15px auto 0 auto;
+    position: relative;
+  }
+  width: 100%;
+  height: 60px;
+  bottom: 0px;
+  left: 0px;
+  border-radius: 0;
+  margin: 0 0; 
+  z-index: 2;
+  position: fixed;
+}
+
+#addFriend, #addToBill {
+  @media only screen and (min-width: 420px) {
+    @include inputGlobalStyle;
+    width: 100%;
+    height: 40px;
+    display: inline-block;
+    align: center;
+    background-color: $lime;
+    border: 1px solid $lime;
+    margin: 15px auto 0 auto;
+  }
+  display: block;
+  width: 60%;
+  margin: 15px auto 0 auto; 
+}
+
+.fa-times {
+  position: absolute;
+  top: 13px;
+  right: 10px;
+  color: lightgrey;
+  z-index: 2;
+}
+
+// STYLING ABOUT PAGE
+#bubbleBlue {
+  @include circleDiv;
+  background-color: $deepBlue;
+  left: -10px;
+  width: 250px;
+  height: 250px;
+}
+
+#bubbleGreen {
+  @include circleDiv;
+  background-color: $lime;
+  left: 100px;
+  top: 70px;
+  width: 280px;
+  height: 280px;
+  z-index: 15;
 }
